# mangov0

./: .gitignore  CMakeLists.txt  README.md  assimp_patch.patch  prepare.py  prepare.sh
.github/: copilot-instructions.md
doc/: doc.md  overview.md  reference.md  render_system.md  scene.md  vulkan.md  why_ecs.md
doc/bak/: app.md  scene.md  texture_array.md  vulkan.md
docs/: architecture.md  cpp_debugger_cli_notes.md  ecs_world.md  render_system.md  vulkan.md
shaders/: basic.vert  forward_lighting.frag  pbr.frag  pbr.vert  pbr_ref.frag  standard_pbr.vert  static_mesh.vert  triangle.frag
shaders/bak/: area_light_ref.frag  basic.frag  normal_visualize.frag  normal_visualize.geom  normal_visualize.vert  standard_pbr.frag  triangle.vert
shaders/include/: constants.h  material.h  pbr.h  shader_structs.h  ubo_structures.h
source/: debug.py
source/editor/: CMakeLists.txt  editor.cpp  editor.h
source/editor/asset/: asset_ui.cpp  asset_ui.h
source/editor/base/: editor_ui.cpp  editor_ui.h  folder_tree_ui.cpp  folder_tree_ui.h
source/editor/global/: editor_context.cpp  editor_context.h
source/editor/log/: log_ui.cpp  log_ui.h
source/editor/menu/: menu_ui.cpp  menu_ui.h
source/editor/property/: property_ui.cpp  property_ui.h
source/editor/simulation/: simulation_ui.cpp  simulation_ui.h
source/editor/tool/: tool_ui.cpp  tool_ui.h
source/editor/world/: world_ui.cpp  world_ui.h
source/engine/: CMakeLists.txt
source/engine/app_template/: app_base.h  app_manager.cpp  app_manager.h
source/engine/asset/: asset.h  asset_animation.h  asset_loader.cpp  asset_manager.cpp  asset_manager.h  asset_material.cpp  asset_material.h  asset_mesh.cpp  asset_mesh.h  asset_skeletal_mesh.cpp  asset_skeletal_mesh.h  asset_skeleton.cpp  asset_skeleton.h  asset_texture.cpp  asset_texture.h  assimp_importer.cpp  assimp_importer.h  texture.cpp  texture.h  texture2d.h  url.cpp  url.h
source/engine/bak/: asset_loader.cpp
source/engine/bak/bak/: material_normal_vis.h  material_pbr.cpp
source/engine/functional/: readme.md
source/engine/functional/component/: basic.h  camera.h  component_camera.h  component_mesh.h  component_transform.h  components.h  light.h  material.cpp  material_normal_vis.cpp  material_pbr.cpp  mesh.cpp  mesh.h
source/engine/functional/component/bak/: material.cpp  material.h  material_normal_vis.cpp  material_pbr.cpp  material_pbr.h
source/engine/functional/global/: engine_context.cpp  engine_context.h  resource_binding_mgr.cpp  resource_binding_mgr.h
source/engine/functional/render/: render_system.cpp  render_system.h
source/engine/functional/render/pass/: brdf_pass.cpp  brdf_pass.h  directional_light_shadow_pass.h  main_pass.cpp  main_pass.h  render_data.h  render_pass.h  ui_pass.cpp  ui_pass.h
source/engine/functional/world/: world.cpp  world.h
source/engine/platform/: file_system.cpp  file_system.h  glfw_window.cpp  glfw_window.h  string_util.cpp  string_util.h  window.h
source/engine/resource/: gpu_asset_manager.cpp  gpu_asset_manager.hpp  loader.cpp  loader.h
source/engine/resources/: asset_manager.cpp  asset_manager.hpp  loader.cpp  loader.h
source/engine/utils/base/: compiler.h  data_reshaper.hpp  error.h  hash_combine.h  logging.h  macro.h  memory.h  string_util.cpp  strings.cpp  strings.h  timer.cpp  timer.h  trackball.cpp  trackball.h
source/engine/utils/event/: event_system.cpp  event_system.h
source/engine/utils/log/: log_system.cpp  log_system.h
source/engine/utils/vk/: DirStackFileIncluder.h  barriers.h  buffer.cpp  buffer.h  command_buffer_mgr.cpp  command_buffer_mgr.h  commands.cpp  commands.h  data_uploader.cpp  data_uploader.hpp  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  framebuffer.cpp  framebuffer.h  gpu_asset_cache.cpp  gpu_asset_cache.hpp  image.cpp  image.h  image_loader.hpp  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  pipeline_state.cpp  pipeline_state.h  render_pass.cpp  render_pass.h  resource_cache.cpp  resource_cache.h  resource_cache.hpp  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  spirv_reflection.cpp  spirv_reflection.h  (+13 more)
source/samples/editor/: CMakeLists.txt  editor_tests.cpp  editor_tests.h  main.cpp  main_me.cpp
source/samples/editor/resource/: mango.rc
source/test/: CMakeLists.txt  main.cpp
