add_executable(zsw_test main.cpp)

# target_link_libraries(zsw_test 
# PRIVATE 
# vk_engine
# volk
# ${GLFW_LIBRARY}
# ${THREAD} 
# glslang::glslang    
# glslang::glslang-default-resource-limits
# glslang::SPIRV
# VulkanMemoryAllocator::VulkanMemoryAllocator
# spirv-cross-reflect
# spirv-cross-core
# spirv-cross-glsl
# ${ASSIMP_LIBRARIES})